--- a/jobs/templates/layout.html
+++ b/jobs/templates/layout.html
@@ -1,3 +1,4 @@
+{% from '_macros.html' import show_job, show_jobs with context %}
 <!doctype html>
 <html>
   <head>
@@ -10,6 +11,7 @@
     <div class="container top">
       <div class="content">
         {% block content %}
+        
         {% endblock %}
       </div>
     </div>
