--- a/jobs/templates/employer.html
+++ b/jobs/templates/employer.html
@@ -34,12 +34,9 @@
 
     {% endfor %}
 
-    {# TODO: Remove comment and end for loop
-      {% %}
-    #}
   <div class="columns">
     <div class="column">
-      <a class="button is-info is-pulled-right">Create Review</a>
+      <a href="{{ url_for('review', employer_id=employer['id']) }}" class="button is-info is-pulled-right">Create Review</a>
     </div>
   </div>
 {% endblock %}
